<resources>
    <string name="app_name">PocDoc</string>
    <string name="జలుబు">జలుబు</string>
    <string name="జ్వరం">జ్వరం</string>
    <string name="దగ్గు">దగ్గు</string>
    <string name="తలనొప్పి">తలనొప్పి</string>
    <string name="శరీరనొప్పులు">శరీర నొప్పులు</string>
    <string name="బలహీనత">బలహీనత</string>
    <string name="గజ్జి">గజ్జి</string>
    <string name="తామర">తామర</string>
    <string name="పారాసెటమాల్">పారాసెటమాల్</string>
    <string name="_4_6">ప్రతి 4 నుండి 6 గంటలకు రెండు మాత్రలు</string>
    <string name="పారాసెటమాల్500">పారాసెటమాల్500</string>
    <string name="విరోచనాలు">విరోచనాలు</string>
    <string name="english">ENGLISH</string>
    <string name="తెలుగు">తెలుగు</string>
    <string name="vicks">విక్స్ నిక్విల్ డి కోల్డ్ మరియు ఫ్లూ నైట్‌టైమ్ రిలీఫ్</string>
    <string name="_6_1_2">ప్రతి 6 గంటలకు 1 నుండి 2 మాత్రలు</string>
    <string name="బెనాడ్రైల్">బెనాడ్రైల్</string>
    <string name="_25_50_3_4">25 నుండి 50 మి.గ్రా మౌఖికంగా రోజుకు 3 నుండి 4 సార్లు25 నుండి 50 మి.గ్రా మౌఖికంగా రోజుకు 3 నుండి 4 సార్లు</string>
    <string name="డార్ట్">డార్ట్</string>
    <string name="సింకవీట్">సింకవీట్</string>
    <string name="మెబుఫెన్ప్లస్">మెబుఫెన్ ప్లస్</string>
    <string name="lotion">ఎలిస్ lotion</string>
    <string name="రింగ్గార్డ్">రింగ్ గార్డ్</string>
    <string name="లోపెరమైడ్">లోపెరమైడ్</string>
    <string name="dedicated_to_mona_choudhrani_alias_papa">Dedicated to Mona Choudhrani alias Papa</string>
    <string name="papa">Dedicated to Mona Choudhrani alias Papa :)</string>
    <string name="fever">FEVER</string>
    <string name="common_cold">COMMON COLD</string>
    <string name="cough">COUGH</string>
    <string name="head_ache">HEAD ACHE</string>
    <string name="body_pains">BODY PAINS</string>
    <string name="weakness">WEAKNESS</string>
    <string name="scabies">SCABIES</string>
    <string name="eczema">ECZEMA</string>
    <string name="diarrhea">DIARRHEA</string>
    <string name="mebufen_plus_ssup">MEBUFEN PLUS SSUP</string>
    <string name="vicks_nyquil_d_cold_and_night_time_relief">VICKS NYQUIL D COLD AND NIGHT TIME RELIEF</string>
    <string name="vicksdose">1 to 2 capsules orally every 6 hours not to exceed 8 capsules daily.</string>
    <string name="benadryl">Benadryl</string>
    <string name="loperamide">LOPERAMIDE</string>
    <string name="ring_guard">RING GUARD</string>
    <string name="paracetamol_500">PARACETAMOL 500</string>
    <string name="_2_tablets_for_every_4_to_6_hours">2 TABLETS FOR EVERY 4 TO 6 HOURS</string>
    <string name="DART">DART</string>
    <string name="ELICELOTION">ELICE LOTION</string>
    <string name="zincovit">ZINCOVIT</string>
</resources>
